# rust-pool-benchmark

./: README.md  bench.sh  visualizer.py
bb8/: Cargo.toml  bb8-results.txt
bb8/benches/: bench_main.rs
deadpool/: Cargo.toml
deadpool/benches/: bench_main.rs
mobc/: Cargo.toml
mobc/benches/: bench_main.rs
postgres/: bench.sh  setup.sh
postgres/bb8-postgres/: Cargo.toml
postgres/bb8-postgres/benches/: bench_main.rs
postgres/deadpool-postgres/: Cargo.toml
postgres/deadpool-postgres/benches/: bench_main.rs
postgres/mobc-postgres/: Cargo.toml
postgres/mobc-postgres/benches/: bench_main.rs
postgres/results/: README.md
postgres/sqlx/: Cargo.toml
postgres/sqlx/benches/: bench_main.rs
results/: README.md
