[package]
name = "bb8-postgres-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }

[[bench]]
name = "bench_main"
harness = false

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
